<resources>
    <string name="app_name">WildRift</string>
    <string name="champion_ahri">ahri</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="admob" translatable="false">ca-app-pub-6308948435596230~8212621303</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-6308948435596230/1655945061</string>
    <string name="test_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_bottom_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bottom_ad_id" translatable="false">ca-app-pub-6308948435596230/6884718456</string>

    <string name="image">image</string>
    <string name="item">item</string>
    <string name="physics">Physics</string>
    <string name="magic">Magic</string>
    <string name="defense">Defense</string>
    <string name="shoes">Shoes</string>
    <string name="final_item">Final Item</string>
    <string name="middle_item">Middle Item</string>
    <string name="base_item">Base Item</string>
    <string name="coin">coin</string>
    <string name="into_item">Into Item</string>
    <string name="from_item">From Item</string>
    <string name="total_cost">Total Cost</string>
    <string name="combination_cost">Combination Cost</string>
    <string name="sell_cost">Sell Cost</string>
    <string name="search">Search</string>
    <string name="name">Name</string>

    <string name="champion_list_All" translatable="false">All</string>
    <string name="champion_list_ASSASSIN">Assassin</string>
    <string name="champion_list_WARRIOR">Warrior</string>
    <string name="champion_list_WIZARD">Wizard</string>
    <string name="champion_list_BOTTOM">Bottom</string>
    <string name="champion_list_SUPPORT">Support</string>
    <string name="champion_list_tanker">Tanker</string>
    <string name="magic_shoes">Magic Shoes</string>
    <string name="champion_title">ChampionList</string>
    <string name="champion_info_title">ChampionInfo</string>
    <string name="mainRune" translatable="false">핵심</string>
    <string name="subRune" translatable="false">보조</string>
    <string name="controlRune" translatable="false">지배</string>
    <string name="resolutionRune">결의</string>
    <string name="inspirationRune">영감</string>
    <string name="hp" translatable="false">HP</string>
    <string name="mp" translatable="false">MP</string>
    <string name="attack">공격력</string>
    <string name="armor">방어력</string>
    <string name="spell_power">주문력</string>
    <string name="magic_resistance">마법 저항력</string>
    <string name="attack_speed">공격속도</string>
    <string name="cooltime" translatable="false">쿨타임 감소</string>
    <string name="critical_chance">치명타 확률</string>
    <string name="critical_damage" translatable="false">치명타 데미지</string>
    <string name="announce" translatable="false">공지사항</string>


</resources>