<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="com.cookandroid.wildlift.rune.RunesActivity" />
    </data>

    <ScrollView
        android:background="@color/subTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                style="@style/BaseToolbar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/mainRune"/>

                    <com.cookandroid.wildlift.view.FullRecyclerView
                        android:id="@+id/mainRuneRecyclerView"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/controlRune"/>

                    <com.cookandroid.wildlift.view.FullRecyclerView
                        android:id="@+id/controlRuneRecyclerView"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/resolutionRune"/>

                    <com.cookandroid.wildlift.view.FullRecyclerView
                        android:id="@+id/resolutionRuneRecyclerView"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/inspirationRune"/>

                    <com.cookandroid.wildlift.view.FullRecyclerView
                        android:id="@+id/inspirationRuneRecyclerView"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>