<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="fragment"
            type="com.cookandroid.wildRift.item.fragment.ItemFragment" />
    </data>

    <ScrollView
        android:background="@color/subTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/final_item"/>

                    <com.cookandroid.wildRift.view.FullRecyclerView
                        android:id="@+id/finalRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/LevelTextView"
                        android:id="@+id/middleTextView"
                        android:text="@string/middle_item"/>

                    <com.cookandroid.wildRift.view.FullRecyclerView
                        android:id="@+id/middleRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/LevelCardView">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/LevelTextView"
                        android:text="@string/base_item"/>

                    <com.cookandroid.wildRift.view.FullRecyclerView
                        android:id="@+id/baseRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</layout>